package com.meetingmanager.audiencemanagement_api.models.type;

import lombok.Data;

@Data
public class CreateType {
    private String name;
}
